--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
 version: '3'
+
 services:
   rabbitmq:
     container_name: rabbit_mq
+    image: rabbitmq:3-management
     environment:
       RABBITMQ_DEFAULT_USER: "guest"
       RABBITMQ_DEFAULT_PASS: "guest"
-    build:
-      context: .
-      dockerfile: .docker/Dockerfile.rabbit
     ports:
-      - "5672:5672"
-      - "15672:15672"
-
+      - "5672:5672"     # Porta usada por aplicações
+      - "15672:15672"   # Porta do painel de administração
